# pie-audio

./: .gitignore  README.md  d.diff  diff.txt  micons_fixer.py  pie-audio.py  pyproject.toml  requirements.default.txt  requirements.dev.txt  requirements.txt  setup-project.bat  setup.cfg  setup.py  test.py
docs/en/cloudykit/: Config.md  Manager.md  System.md  Types.md
docs/en/pieapp/: ContentTableAPI.md  ConverterAPI.md
docs/en/piekit/: Configs.md  Globals.md  Manager Registry.md  Managers.md  Plugins.md  README.md  Themes.md  Types.md
docs/ru/: ConfigRegistry.md  LocalesRegistry.md  Main.md  Plugins.md  QueryBuilders.md  SnapshotRegistry.md
docs/ru/cloudykit/: Config.md  Manager.md  Registry.md  System.md  Types.md
docs/ru/piekit/: Configs.md  Globals.md  Managers.md  Plugins.md  README.md  Registry.md  Themes.md  Types.md
en/cloudykit/: Manager.md  Setup.md  Types.md
pieapp/: __main__.py  config.py  globals.py  launcher.py
pieapp/api/: exceptions.py  gloader.py  globals.py
pieapp/api/converter/: builders.py  constants.py  models.py  observers.py  probe.py  utils.py  workers.py
pieapp/api/globals/: __init__.py
pieapp/api/managers/: base.py  registry.py  structs.py
pieapp/api/models/: etc.py  indexes.py  layouts.py  media.py  menus.py  plugins.py  scopes.py  shortcuts.py  statusbars.py  tabs.py  themes.py  toolbar.py  workbench.py
pieapp/api/observers/: filesystem.py
pieapp/api/plugins/: __init__.py  confpage.py  decorators.py  helpers.py  mediaplugins.py  mixins.py  observer.py  plugins.py  quickaction.py  registry.py  types.py  widgets.py
pieapp/api/registries/: base.py  models.py  registry.py  sysregs.py
pieapp/api/structs/: media.py  plugins.py  statusbar.py
pieapp/api/sysevent/: decorators.py  registry.py
pieapp/api/utils/: errorhook.py  files.py  logger.py  qapp.py  qt.py  validators.py
pieapp/app/: cli.py  confpage.py  globals.py  main.py  setup.py  start.py  wizard.py
pieapp/app/wizard/: wizard.py
pieapp/assets/dark theme/: palette.py  props.json  theme.qss
pieapp/assets/light theme/: palette.py  props.json  theme.qss
pieapp/components/: albumpicker.py
pieapp/containers/content-table/: api.py  confpage.py  plugin.py
pieapp/containers/contentable/: api.py  confpage.py  plugin.py
pieapp/containers/converter/: plugin.py
pieapp/containers/menu-bar/: plugin.py
pieapp/containers/settings/: api.py  config.py  plugin.py  widgets.py
pieapp/containers/status-bar/: plugin.py
pieapp/containers/workbench/: plugin.py
pieapp/helpers/: ffmpeg.py  files.py  logger.py  qt.py
pieapp/locales/: en_US.json  ru_RU.json
pieapp/locales/en-US/: shared.json
pieapp/locales/en_US/: shared.json
pieapp/locales/ru-RU/: shared.json
pieapp/locales/ru_RU/: shared.json
pieapp/plugins/: README.md
pieapp/plugins/about/: plugin.py
pieapp/plugins/appearance/: confpage.py  plugin.py
pieapp/plugins/content-table/: __init__.py  api.py  plugin.py
pieapp/plugins/converter/: api.py  confpage.py  globals.py  models.py  plugin.py  structs.py  workers.py
pieapp/plugins/history/: plugin.py
pieapp/plugins/layout/: plugin.py
pieapp/plugins/mainmenu/: plugin.py
pieapp/plugins/maintoolbar/: plugin.py
pieapp/plugins/menu-bar/: plugin.py
pieapp/plugins/menubar/: plugin.py
pieapp/plugins/menuman/: confpage.py  plugin.py
pieapp/plugins/metadata/: __init__.py  globals.py  plugin.py
pieapp/plugins/metadata-editor/: plugin.py
pieapp/plugins/preferences/: plugin.py
pieapp/plugins/settings/: globals.py  plugin.py
pieapp/plugins/shortcuts/: confpage.py  plugin.py
pieapp/plugins/status-bar/: plugin.py
pieapp/plugins/statusbar/: plugin.py
pieapp/plugins/test-plugin-child/: plugin.py
pieapp/structs/: containers.py  media.py  menus.py  plugins.py  table.py  workbench.py
pieapp/utils/: files.py
pieapp/widgets/: buttons.py  delegates.py  errorwindow.py  iconlabel.py  lines.py  mediatableitem.py  menus.py  messagebox.py  splashscreen.py  tables.py  toolbars.py  toolbutton.py  waitingspinner.py
pieapp/wizard/: wizard.py
piekit/: __init__.py  exceptions.py
piekit/config/: __init__.py  config.py  loader.py  types.py
piekit/globals/: __init__.py  globals.py  loader.py  types.py
piekit/helpers/: core.py  modules.py
piekit/layouts/: layouts.py  structs.py
piekit/mainwindow/: main.py  mixins.py
piekit/managers/: base.py  exceptions.py  registry.py  structs.py
piekit/observers/: filesystem.py
piekit/plugins/: __init__.py  api.py  confpage.py  decorators.py  helpers.py  mixins.py  observer.py  plugins.py  registry.py  types.py  utils.py
piekit/system/: __init__.py  config.py  exceptions.py  handlers.py  loader.py  types.py
piekit/utils/: core.py  files.py  logger.py  modules.py  os.py
piekit/widgets/: collapse.py  errorwindow.py  menus.py  messagebox.py  spacer.py  splashcreen.py  splashscreen.py  tabbar.py  toolbars.py  toolbutton.py
requirements/: build.txt  default.txt  windows.txt
ru/cloudykit/: Manager.md  Setup.md  Types.md
scripts/: build_win.bat  gen-plugin.py  icon_scripts.py  make_icons_models.py  make_stub_files.py  micons_fixer.py
scripts/builds/: build.bat
src/cloudyapp/: config.py  launcher.py  main.py  wizard.py
src/cloudyff/: launcher.py  wizard.py
src/pieapp/: config.py  launcher.py  structs.py  wizard.py
tests/: test_media_files.py
(+384 files in other folders)
