[tool.poetry]
name = "pie-audio"
version = "0.1.0"
description = "An experimental audio converter"
authors = ["uselessvevo <jcommander13@yandex.ru>"]
packages = [{ include = "src" }]
license = "GPL"
readme = "README.md"
keywords = ["PyQt5", "audio", "media", "converter", "audio-converter", "experimental"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Natural Language :: Russian",
]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.6"
loguru = "^0.6.0"
PyQt5 = "^5.15.9"
PyQt6 = "^6.4.2"
PyQt6-Qt6 = "^6.4.3"
PyQt6-sip = "^13.4.1"
click = "^8.1.3"
dotty-dict = "^1.3.1"
watchdog = "3.0.0"
win32-setctime = [{ version = "^1.1.0", platform = "windows" }]

[tool.poetry.dev-dependencies]
PyQt5-stubs = "^5.15.6.0"


[tool.poetry.scripts]
pieaudio = "pieaudio.launcher:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
