[project]
name = "pie-audio"
version = "0.1.0"
description = "An experimental audio converter"
authors = [
    {name = "Ivanov Cyril", email = "jcommander13@yandex.ru"}
]
license = { text = "GPLv2+" }
readme = "README.md"
keywords = [
    "Qt", "PySide", "PySide6",
    "audio", "media", "converter",
    "audio-converter", "experimental"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Natural Language :: Russian",
]
dependencies  = [
    "colorama>=0.4.6",
    "loguru>=0.6.0",
    "PySide6==6.4.3",
    "click>=8.1.3",
    "dotty-dict>=1.3.1",
    "watchdog==3.0.0",
    "win32-setctime",
    "version-parser==1.0.1",
    "attrs==23.1.0"
]

[project.optional-dependencies]
build = ["Nuitka==1.5.5"]

[project.scripts]
pie-audio = "pieapp.launcher:launch"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pieapp", "piekit"]