[metadata]
name = cloudyff
description = Audio/Video tool
author = Ivanov Cyrill
email = jcommander13@yandex.ru
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    cloudykit
    cloudyff
    cloudyui
install_requires =
    pyqt5==5.15.4
    qtpy==1.11.2
    qscintilla==2.13.0
    ipython==7.22.0
    qtconsole==5.2.2
    pygments==2.9.0
    argh==0.26.2
    wcwidth==0.2.5
    dotty-dict==1.3.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = no


[options.entry_points]
console_scripts =
    cloudyff = cloudyff.launcher:main


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160